--- a/Python/Rmd/modulo1_tema4_Py.Rmd
+++ b/Python/Rmd/modulo1_tema4_Py.Rmd
@@ -20,7 +20,9 @@ library(reticulate)
 use_condaenv("mbdds_rpy20")
 ```
 
-# INTRODUCCIÓN
+# PROGRAMACIÓN EN PYTHON
+
+## INTRODUCCIÓN
 
 __[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py.ipynb)__ *: <span style="color:rgba(255, 99, 71, 0.8)">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*
 
