--- a/Python/Rmd/modulo1_tema4_Py_31_numpy.Rmd
+++ b/Python/Rmd/modulo1_tema4_Py_31_numpy.Rmd
@@ -1,5 +1,5 @@
 
-# NUMPY
+## NUMPY
 
 __[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_31_numpy.ipynb)__ *: <span style="color:rgba(255, 99, 71, 0.8)">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*
 
@@ -52,7 +52,7 @@ starship_names = starships_df.index.values
 starship_names
 ```
 
-### TIPO DE DATOS EN NUMPY
+#### TIPO DE DATOS EN NUMPY
 Habitualmente se crean a partir de listas o tuplas con elementos homogéneos.
 
 ```{python}
@@ -125,7 +125,7 @@ Así se ve mejor.
 print(starship_names.dtype)
 ```
 
-### FUNCIONES UNIVERSALES
+#### FUNCIONES UNIVERSALES
 
 En numpy las funciones universales o *ufunc*, son un conjunto de funciones vectorizan, es decir, que al aplicarlas sobre un objeto numpy, esta función, se aplica sobre cada uno de los elementos que lo componen. 
 
@@ -151,7 +151,7 @@ NumPy ofrece una extensa colección de funciones matemáticas que se aplican de 
 np.sqrt(np.array([1,2,3,4]))
 ```
 
-### SECUENCIAS EN NUMPY
+#### SECUENCIAS EN NUMPY
 
 La función propia de numpy es `np.arange(ini,fin,paso)`
 
@@ -185,7 +185,7 @@ b = np.repeat(a, 4)
 b
 ```
 
-### DIMENSIONES EN NUMPY
+#### DIMENSIONES EN NUMPY
 
 ```{python}
 np.random.seed(123)  # Semilla para poder reproducir
@@ -572,7 +572,7 @@ b
 type(b)
 ```
 
-### VALORES FALTANTES
+#### VALORES FALTANTES
 
 Por definición, un NaN es un número en coma flotante, distinto a cualquier otro número.
 
