--- a/Python/modulo1_tema4_Py_10_elem_bas.ipynb
+++ b/Python/modulo1_tema4_Py_10_elem_bas.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ELEMENTOS BÁSICOS DE PYTHON"
+    "## ELEMENTOS BÁSICOS DE PYTHON"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## INTERFAZ DE USUARIO"
+    "#### INTERFAZ DE USUARIO"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### FICHEROS *.py\n",
+    "#### FICHEROS *.py\n",
     "\n",
     "Una forma habitual de programar en Python es mediante ficheros de texto con extensión `.py`. Existen múltiples entornos para estos ficheros: Spyder (parecido a RStudio), PyCharm, Visual Studio Code o cualquier editor de texto como Notepad++.\n",
     "\n",
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NOTEBOOKS JUPYTER (*.ipynb)\n",
+    "#### NOTEBOOKS JUPYTER (*.ipynb)\n",
     "\n",
     "Los notebooks, como éste que estás leyendo, son la solución de la comunidad de SciPy para la programación interactiva. El proyecto nació con el nombre [IPython](https://ipython.org) (o Python interactivo) y actualmente se orquestra en el paraguas de la plataforma [Jupyter](https://jupyter.org/). Jupyter permite ejecutar de forma interactiva docenas de lenguajes como Python, R...\n",
     "\n",
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### COLABORATORY o COLAB\n",
+    "##### COLABORATORY o COLAB\n",
     "\n",
     "Actualmente la comunidad de Python cuenta con la plataforma [Colaboratory o Colab](https://colab.research.google.com) que es un entorno libre para ejecutar notebooks Jupyter y almacenarlos en Google Drive. Este entorno sólo permite abrir ficheros .ipynb (no .py), pero facilita en gran medida su uso para desarrollar formación.\n",
     "\n",
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ACTIVIDAD GUIADA 2.1.\n",
+    "##### ACTIVIDAD GUIADA 2.1.\n",
     "\n",
     "Crea tu primer notebook. En Jupyter/Colab, accede al menú `File > New Notebook`. \n",
     "\n",
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### EDITAR NOTEBOOKS JUPYTER\n",
+    "##### EDITAR NOTEBOOKS JUPYTER\n",
     "\n",
     "Un notebook está compuesto por un conjunto de casillas que pueden ser de distinto tipo:\n",
     "\n",
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### ATAJOS DE TECLADO\n",
+    "###### ATAJOS DE TECLADO\n",
     "\n",
     "Puedes gestionar las celdas des del teclado en el modo de Visión (**tecla`Esc`**):\n",
     "\n",
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### MARKDOWN\n",
+    "###### MARKDOWN\n",
     "\n",
     "- **Parágrafo de texto**: Deja  una línea en blanco (`Enter`) antes y después de un parágrafo de texto.\n",
     "- **Encabezados**: Utiliza # seguido de espacio en blanco para los títulos de las secciones:\n",
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### AYUDA DES DEL NOTEBOOK\n",
+    "###### AYUDA DES DEL NOTEBOOK\n",
     "\n",
     "En Python se pide ayuda de un comando con:"
    ]
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### COMANDOS MÁGICOS\n",
+    "###### COMANDOS MÁGICOS\n",
     "\n",
     "Los comandos mágicos, aumentan las capacidades interactivas de los notebooks. Son de uso común:\n",
     "\n",
@@ -408,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### COMANDOS SHELL"
+    "###### COMANDOS SHELL"
    ]
   },
   {
