--- a/Python/modulo1_tema4_Py_20_matplotlib.ipynb
+++ b/Python/modulo1_tema4_Py_20_matplotlib.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GRÁFICOS CON MATPLOTLIB\n",
+    "## GRÁFICOS CON MATPLOTLIB\n",
     "\n",
     "La librería gráfica [Matplotlib](https://matplotlib.org/), concebida por John Hunter en 2002, fué construida sobre objetos numpy (arrays N-dimensionales) y posteriormente adaptada a objetos Pandas (matrices con vectores datos de distintos tipos).\n",
     "\n",
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CONCEPTOS BASICOS EN MATPLOTLIB\n",
+    "### CONCEPTOS BASICOS EN MATPLOTLIB\n",
     "\n",
     "Se ajusta el estilo que regula el aspecto general del gráfico al seaborn-whitegrid."
    ]
@@ -474,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DOS INTERFACES DE GRÁFICOS\n",
+    "#### DOS INTERFACES DE GRÁFICOS\n",
     "\n",
     "La definición de un gráfico se puede hacer mediante dos interfaces.\n"
    ]
@@ -483,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### EL ESTILO DE MATLAB\n",
+    "##### EL ESTILO DE MATLAB\n",
     "\n",
     "Pytplot, en un inicio, se diseñó a imagen y semejanza de la librería gráfica de MATLAB."
    ]
@@ -535,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### INTERFAZ ORIENTADA A OBJETOS\n",
+    "##### INTERFAZ ORIENTADA A OBJETOS\n",
     "\n",
     "Se separa en figura y ejes. Lo que permite hacer referencia a cualquier gráfico del panel."
    ]
@@ -586,7 +586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MARCAS, COLORES Y TAMAÑOS\n",
+    "#### MARCAS, COLORES Y TAMAÑOS\n",
     "\n",
     "En Matplotlib se pueden personalizar estos elementos, no obstante, resulta algo tedioso. El package Seaborn aporta aquí algunas facilidades, como se verá.\n",
     "\n",
@@ -679,7 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TEXTOS\n",
+    "#### TEXTOS\n",
     "\n",
     "Para añadir textos a los gráficos, hay dos métodos. \n",
     "\n",
@@ -795,7 +795,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LIBRERÍA SEABORN\n",
+    "### LIBRERÍA SEABORN\n",
     "\n",
     "Automatiza la generación de gráficos con data frames aprovechando la asignación de nombres a sus filas y columnas.\n",
     "\n",
