--- a/Python/modulo1_tema4_Py_30_colec_obj.ipynb
+++ b/Python/modulo1_tema4_Py_30_colec_obj.ipynb
@@ -35,16 +35,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COLECCIONES DE OBJETOS"
+    "## COLECCIONES DE OBJETOS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DEFINCIÓN DE LOS OBJETOS\n",
+    "### DEFINCIÓN DE LOS OBJETOS\n",
     "\n",
-    "### TIPO BÁSICOS\n",
+    "#### TIPO BÁSICOS\n",
     "\n",
     "En Python, el tipo de dato se fija en la creación del objeto.\n",
     "\n",
