--- a/Python/modulo1_tema4_Py_31_numpy.ipynb
+++ b/Python/modulo1_tema4_Py_31_numpy.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NUMPY\n",
+    "## NUMPY\n",
     "\n",
     "El package [numpy](https://numpy.org/) es la solución más popular dentro de Python para realizar computación científica.\n",
     "\n",
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TIPO DE DATOS EN NUMPY\n",
+    "#### TIPO DE DATOS EN NUMPY\n",
     "Habitualmente se crean a partir de listas o tuplas con elementos homogéneos."
    ]
   },
@@ -596,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### FUNCIONES UNIVERSALES\n",
+    "#### FUNCIONES UNIVERSALES\n",
     "\n",
     "En numpy las funciones universales o *ufunc*, son un conjunto de funciones vectorizan, es decir, que al aplicarlas sobre un objeto numpy, esta función, se aplica sobre cada uno de los elementos que lo componen. \n",
     "\n",
@@ -696,7 +696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SECUENCIAS EN NUMPY\n",
+    "#### SECUENCIAS EN NUMPY\n",
     "\n",
     "La función propia de numpy es `np.arange(ini,fin,paso)`"
    ]
@@ -830,7 +830,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DIMENSIONES EN NUMPY"
+    "#### DIMENSIONES EN NUMPY"
    ]
   },
   {
@@ -2195,7 +2195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### VALORES FALTANTES\n",
+    "#### VALORES FALTANTES\n",
     "\n",
     "Por definición, un NaN es un número en coma flotante, distinto a cualquier otro número."
    ]
