--- a/Python/modulo1_tema4_Py_32_pandas.ipynb
+++ b/Python/modulo1_tema4_Py_32_pandas.ipynb
@@ -398,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PANDAS SERIES\n",
+    "### PANDAS SERIES\n",
     "\n",
     "Se definen como un array uni-dimensional indexado.\n",
     "\n",
@@ -843,7 +843,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## OBJETOS PANDAS DATAFRAME\n",
+    "### OBJETOS PANDAS DATAFRAME\n",
     "\n",
     "Se pueden ver como una generalización de los numpy o incluso de los diccionarios. \n",
     "\n",
@@ -2349,7 +2349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### FUNCIONES UNIVERSALES SOBRE PANDAS\n",
+    "#### FUNCIONES UNIVERSALES SOBRE PANDAS\n",
     "\n",
     "Las funciones universales (ufunc) que se han visto en el capítulo anterior, se pueden aplicar de igual modo sobre objetos pandas."
    ]
@@ -2432,7 +2432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ALINEAMIENTO DE LOS ÍNDICES\n",
+    "#### ALINEAMIENTO DE LOS ÍNDICES\n",
     "\n",
     "Cuando se realizan operaciones aritméticas,  entre dos pandas, los índices fila y columna se alinean automáticamente."
    ]
@@ -2839,7 +2839,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### VALORES FALTANTES\n",
+    "#### VALORES FALTANTES\n",
     "\n",
     "`None` y `np.nan` en Pandas tienen mucha similitud. Para ver un ejemplo, antes preparamos unos datos de ejemplo: "
    ]
