--- a/Python/modulo1_tema4_Py_40_contr_flujo.ipynb
+++ b/Python/modulo1_tema4_Py_40_contr_flujo.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CONTROL DE FLUJO\n",
+    "## CONTROL DE FLUJO\n",
     "\n",
     "Las herramientas de control de flujo permiten automatizar tareas. En este capítulo se trabajarán las funciones condicionales y bucles."
    ]
@@ -391,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FUNCIONES\n",
+    "### FUNCIONES\n",
     "\n",
     "Hagamos un breve repaso sobre lo que se ha tratado hasta el momento respecto a las funciones en Python. \n",
     "\n",
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CONDICIONALES\n",
+    "### CONDICIONALES\n",
     "\n",
     "Hagamos también aquí un breve repaso de los aspectos que ya se han comentado respecto a estructuras condicionales.\n",
     "\n",
@@ -638,7 +638,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BUCLES\n",
+    "### BUCLES\n",
     "\n",
     "Los bucles for, se han tratado de forma básica en las *list comprehension* del capítulo de [Listas, tuplas y diccionarios](modulo1_tema4_Py_30_colec_obj.ipynb).\n",
     "\n",
