--- a/Python/modulo1_tema4_Py_50_gest_dat.ipynb
+++ b/Python/modulo1_tema4_Py_50_gest_dat.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GESTIÓN DE DATOS\n",
+    "## GESTIÓN DE DATOS\n",
     "\n",
     "A continuación, se presentan las funciones para la lectura/escritura de datos, cruce y construcción de tablas resumen. \n",
     "\n",
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IMPORTAR Y EXPORTAR DATOS\n",
+    "### IMPORTAR Y EXPORTAR DATOS\n",
     "\n",
     "La forma más simple de importar datos estructurados (en forma de matriz de filas y columnas), es a través de los DataFrames. El motivo es simple, estos objetos permiten almacenar datos de distinto tipo en un único objeto o tabla de datos.\n",
     "\n",
@@ -842,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CRUCE ENTRE TABLAS\n",
+    "### CRUCE ENTRE TABLAS\n",
     "\n",
     "Para definir un cruce en pandas, es muy importante ser conscientes de la presencia de los índices fila y columna de las tablas origen. En este sentido se puede realizar el cruce por 3 sistemas distintos:\n",
     "\n",
@@ -3459,7 +3459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RESUMENES DE AGREGADOS \n",
+    "### RESUMENES DE AGREGADOS \n",
     "\n",
     "Las librerías numpy y pandas implementan una extensa colección de funciones de resumen."
    ]
