--- a/Python/Rmd/modulo1_tema4_Py.Rmd
+++ b/Python/Rmd/modulo1_tema4_Py.Rmd
@@ -24,7 +24,7 @@ use_condaenv("mbdds_rpy20")
 
 ## INTRODUCCIÓN
 
-__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py.ipynb)__ *: <span style="color:rgba(255, 99, 71, 0.8)">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*
+__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py.ipynb)__
 
 Python es una herramienta para la programación de propósito general. 
 
