--- a/Python/Rmd/modulo1_tema4_Py_30_colec_obj.Rmd
+++ b/Python/Rmd/modulo1_tema4_Py_30_colec_obj.Rmd
@@ -1,7 +1,7 @@
 
 ## COLECCIONES DE OBJETOS
 
-__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_30_colec_obj.ipynb)__ *: <span style="color:rgba(255, 99, 71, 0.8)">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*
+__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_30_colec_obj.ipynb)__
 
 ### DEFINCIÓN DE LOS OBJETOS
 
