--- a/Python/modulo1_tema4_Py_10_elem_bas.ipynb
+++ b/Python/modulo1_tema4_Py_10_elem_bas.ipynb
@@ -491,7 +491,7 @@
     "- Se inicia la definción con `def`, seguido del nombre de la función\n",
     "- A continuación los parámetros entre paréntesis y `:` \n",
     "  - Admite definir valores por defecto \n",
-    "- La ayuda por si se llama a ?valor_absoluto\n",
+    "- El texto sirve como ayuda cuando se llama a ?valor_absoluto\n",
     "- El cuerpo del código con sangrado\n",
     "- Puede devolver un objeto añadiendo `return objecto`\n",
     "- Si se quiere devolver valores por pantalla hay que usar print\n",
