--- a/Python/modulo1_tema4_Py_31_numpy.ipynb
+++ b/Python/modulo1_tema4_Py_31_numpy.ipynb
@@ -1255,7 +1255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Recuerda**: en arrays numpy los filtro por posición, se seleccionan apareando coordenadas fila y columna. Ve a la sección de Broadcasting, para saber más!\n",
+    "> **Recuerda**: en arrays numpy los filtros por posición, se seleccionan apareando coordenadas fila y columna. Ve a la sección de Broadcasting, para saber más!\n",
     "\n",
     "En R se obtendría el siguiente resultado."
    ]
